Add intro section with product details

--- a/index.html
+++ b/index.html
@@ -601,6 +601,16 @@
     </div>
 
     <main class="main-content">
+    <section class="intro-section">
+        <div class="container">
+            <h2>Your AI Copilot for Safety and Simplicity</h2>
+            <div class="intro-content">
+                <p>Avia is your AI copilot — designed for safety, speed, and simplicity in the cockpit.</p>
+                <p>Running on a Jetson Orin Nano, Avia works entirely hands-free through advanced voice recognition, so you can focus on flying. Its non-intrusive design means it won't clutter your panel or distract from your instruments. Even if you lose internet connection mid-flight, Avia's offline fallback features keep delivering core checklists, weather briefings, and navigation help. Built by pilots for pilots, Avia is tested in real cockpits to ensure reliability when it matters most.</p>
+            </div>
+        </div>
+    </section>
+
     <section>
         <div class="container">
             <h2>See Avia Beta in Action</h2>
