--- a/index.html
+++ b/index.html
@@ -268,6 +268,97 @@
                 font-size: 24px;
             }
         }
+    /* Intro Section */
+    .intro-section {
+        padding: 80px 0;
+        background: linear-gradient(180deg, rgba(11,30,60,0.4) 0%, rgba(11,30,60,0.2) 100%);
+        border-bottom: 1px solid rgba(77,163,255,0.1);
+        position: relative;
+        overflow: hidden;
+    }
+
+    .intro-section::before {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        height: 1px;
+        background: linear-gradient(90deg, transparent, rgba(77,163,255,0.2), transparent);
+    }
+
+    .intro-content {
+        max-width: 1000px;
+        margin: 0 auto;
+        text-align: left;
+        color: var(--text-muted);
+    }
+
+    .intro-headline {
+        font-size: 24px;
+        color: var(--text);
+        margin: 0 0 40px;
+        text-align: center;
+        line-height: 1.4;
+    }
+
+    .feature-grid {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 40px;
+        padding: 0 20px;
+    }
+
+    .feature-item {
+        background: rgba(77,163,255,0.03);
+        border: 1px solid rgba(77,163,255,0.1);
+        border-radius: var(--radius);
+        padding: 24px;
+        transition: all 0.3s ease;
+    }
+
+    .feature-item:hover {
+        background: rgba(77,163,255,0.05);
+        border-color: rgba(77,163,255,0.2);
+        transform: translateY(-2px);
+    }
+
+    .feature-highlight {
+        display: inline-block;
+        font-size: 20px;
+        font-weight: 600;
+        color: var(--primary);
+        margin-bottom: 12px;
+    }
+
+    .feature-item p {
+        margin: 0;
+        font-size: 16px;
+        line-height: 1.6;
+        color: var(--text-muted);
+    }
+
+    @media (max-width: 768px) {
+        .feature-grid {
+            grid-template-columns: 1fr;
+            gap: 20px;
+            padding: 0 16px;
+        }
+
+        .intro-headline {
+            font-size: 20px;
+            padding: 0 20px;
+        }
+
+        .intro-section {
+            padding: 60px 0;
+        }
+
+        .feature-item {
+            padding: 20px;
+        }
+    }
+
     /* Features Section */
     .features {
         padding: 80px 0;
@@ -473,22 +564,11 @@
             flex-direction: column;
             text-align: center;
             gap: 24px;
-        }
-        .founder-bio {
-            padding: 0 24px;
-        }
-    }
-    /* Final CTA */
-    .final-cta {
-        text-align: center;
-        padding: 80px 0;
-        margin-top: 0;
-    }
 
-    .final-cta h2 {
-        font-size: 48px;
-        line-height: 1.2;
-        margin-bottom: 32px;
+        .intro-headline {
+            font-size: 20px;
+            padding: 0 20px;
+        }
     }
 
     .final-cta .email-form {
@@ -605,8 +685,25 @@
         <div class="container">
             <h2>Your AI Copilot for Safety and Simplicity</h2>
             <div class="intro-content">
-                <p>Avia is your AI copilot — designed for safety, speed, and simplicity in the cockpit.</p>
-                <p>Running on a Jetson Orin Nano, Avia works entirely hands-free through advanced voice recognition, so you can focus on flying. Its non-intrusive design means it won't clutter your panel or distract from your instruments. Even if you lose internet connection mid-flight, Avia's offline fallback features keep delivering core checklists, weather briefings, and navigation help. Built by pilots for pilots, Avia is tested in real cockpits to ensure reliability when it matters most.</p>
+                <p class="intro-headline">Avia is your AI copilot — designed for safety, speed, and simplicity in the cockpit.</p>
+                <div class="feature-grid">
+                    <div class="feature-item">
+                        <span class="feature-highlight">100% Hands-Free</span>
+                        <p>Advanced voice recognition on Jetson Orin Nano keeps your hands on the yoke where they belong</p>
+                    </div>
+                    <div class="feature-item">
+                        <span class="feature-highlight">Non-Intrusive Design</span>
+                        <p>Zero panel clutter, no distracting displays — just the information you need, when you need it</p>
+                    </div>
+                    <div class="feature-item">
+                        <span class="feature-highlight">Offline Fallback</span>
+                        <p>Core features work at any altitude, with or without internet — including checklists and weather</p>
+                    </div>
+                    <div class="feature-item">
+                        <span class="feature-highlight">Built By Pilots</span>
+                        <p>Tested in real cockpits to ensure reliability when it matters most</p>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
