Update contact email

--- a/index.html
+++ b/index.html
@@ -998,7 +998,7 @@ const WX = { KSFO: null, KPAO: null };
         <div class="container">
             <div class="footer-links">
                 <a href="#">Privacy</a>
-                <a href="mailto:founders@avia.ai">Contact: founders@avia.ai</a>
+                <a href="mailto:ranataki@stanford.edu">Contact: ranataki@stanford.edu</a>
             </div>
         </div>
     </footer>
