Update non-intrusive design description to mention headset voice response

--- a/index.html
+++ b/index.html
@@ -693,7 +693,7 @@
                     </div>
                     <div class="feature-item">
                         <span class="feature-highlight">Non-Intrusive Design</span>
-                        <p>Zero panel clutter, no distracting displays — just the information you need, when you need it</p>
+                        <p>Zero panel clutter, no distracting displays — Avia responds through your headset with just the information you need, when you need it</p>
                     </div>
                     <div class="feature-item">
                         <span class="feature-highlight">Offline Fallback</span>
