Add Open Graph meta tags for social media preview

--- a/index.html
+++ b/index.html
@@ -6,7 +6,22 @@
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
-    <title>Avia — Your AI Copilot for Every Flight</title>
+    <title>Avia AI Copilot</title>
+    
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="Avia AI Copilot">
+    <meta property="og:description" content="Your AI copilot for safety, speed, and simplicity in the cockpit.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://avia-copilot.netlify.app/">
+    <meta property="og:image" content="https://avia-copilot.netlify.app/images/cockpit.jpg">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Avia AI Copilot">
+    <meta name="twitter:description" content="Your AI copilot for safety, speed, and simplicity in the cockpit.">
+    <meta name="twitter:image" content="https://avia-copilot.netlify.app/images/cockpit.jpg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
